# pulse-protocol

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  quick_verify.py  test_events.py
.github/workflows/: ci.yml  publish.yml
agent_pulse/: cli.py  conformance.py  hook_client.py  netinfo.py
agent_pulse/adapters/: codex_notify.py  cursor_hook.py  kilo_plugin.js  opencode_plugin.js  pulse_run.py
agent_pulse/collector/: db.py  main.py  notifier.py
agent_pulse/collector/static/: index.html
spec/: pulse-event.schema.json  pulse-protocol.md
tests/: conftest.py  test_adapters.py  test_db.py
