[project]
name = "agent-pulse"
version = "0.2.0"
description = "One inbox for all your coding agents — reference implementation of the Pulse Protocol"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Jainil Gosalia" }]
keywords = [
    "ai", "agents", "coding-agents", "claude", "claude-code", "opencode",
    "kilo", "codex", "cursor", "observability", "monitoring", "dashboard",
    "protocol", "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/Jainil-Gosalia/pulse-protocol"
Repository = "https://github.com/Jainil-Gosalia/pulse-protocol"
Documentation = "https://github.com/Jainil-Gosalia/pulse-protocol/blob/main/spec/pulse-protocol.md"
Issues = "https://github.com/Jainil-Gosalia/pulse-protocol/issues"

[project.scripts]
agent-pulse = "agent_pulse.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agent_pulse*"]

[tool.setuptools.package-data]
agent_pulse = ["adapters/*.js", "collector/static/*.html"]
